# swayr

./: Cargo.toml  NEWS.md  README.md  TODO  rustfmt.toml
.builds/: arch.yml
etc/: swayrd.service
src/: bar.rs  client.rs  cmds.rs  con.rs  config.rs  demon.rs  fmt_replace.rs  ipc.rs  layout.rs  lib.rs  main.rs  rtfmt.rs  tree.rs  util.rs  window.rs
src/bar/: config.rs  module.rs
src/bar/module/: battery.rs  date.rs  sysinfo.rs  window.rs
swayr/: Cargo.toml  NEWS.md
swayr/etc/: swayrd.service
swayr/src/: client.rs  cmds.rs  config.rs  criteria.rs  daemon.rs  demon.rs  fmt_replace.rs  focus.rs  layout.rs  lib.rs  rtfmt.rs  tree.rs  util.rs
swayr/src/shared/: cfg.rs  fmt.rs  ipc.rs  mod.rs  util.rs
swayrbar/: Cargo.toml  NEWS.md
swayrbar/src/: bar.rs  config.rs  fmt_replace.rs  ipc.rs  lib.rs  module.rs  rtfmt.rs  shared
swayrbar/src/bar/: config.rs  module.rs
swayrbar/src/bar/module/: battery.rs  date.rs  sysinfo.rs  window.rs
swayrbar/src/module/: battery.rs  cmd.rs  date.rs  nmcli.rs  pactl.rs  sysinfo.rs  wifi.rs  window.rs
