[package]
name = "swayr"
version = "0.7.0"
description = "A LRU window-switcher (and more) for the sway window manager"
homepage = "https://sr.ht/~tsdh/swayr/"
repository = "https://git.sr.ht/~tsdh/swayr"
authors = ["Tassilo Horn <tsdh@gnu.org>"]
license = "GPL-3.0+"
edition = "2018"
exclude = ["misc/"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
clap = "3.0.0-beta.2"
swayipc = "3.0.0-alpha.3"
toml = "0.5.8"
directories = "4.0"
regex = "1.5.4"
lazy_static = "1.4.0"
rand = "0.8.4"
