[package]
name = "swayr"
version = "0.13.0"
description = "A LRU window-switcher (and more) for the sway window manager"
homepage = "https://sr.ht/~tsdh/swayr/"
repository = "https://git.sr.ht/~tsdh/swayr"
authors = ["Tassilo Horn <tsdh@gnu.org>"]
license = "GPL-3.0+"
edition = "2018"
exclude = ["misc/"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
clap = {version = "3.0.0", features = ["derive"] }
swayipc = "3.0.0"
toml = "0.5.8"
directories = "4.0"
regex = "1.5.4"
lazy_static = "1.4.0"
rand = "0.8.4"
rt-format = "0.3.0"
