[package]
name = "swayr"
version = "0.16.1"
description = "A LRU window-switcher (and more) for the sway window manager"
homepage = "https://sr.ht/~tsdh/swayr/"
repository = "https://git.sr.ht/~tsdh/swayr"
authors = ["Tassilo Horn <tsdh@gnu.org>"]
license = "GPL-3.0+"
edition = "2018"
exclude = ["misc/"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
clap = {version = "3.0.0", features = ["derive"] }
swayipc = "3.0.0"
toml = "0.5.8"
directories = "4.0"
regex = "1.5.5"
lazy_static = "1.4.0"
rand = "0.8.4"
rt-format = "0.3.0"
log = "0.4"
env_logger = { version = "0.9.0", default-features = false, features = ["termcolor", "atty", "humantime"] }  # without regex
swaybar-types = "3.0.0"
chrono = "0.4"
sysinfo = "0.23"

[profile.release]
lto = "thin"
strip = "symbols"