[package]
name = "swayr"
version = "0.22.0-beta.0"
description = "A LRU window-switcher (and more) for the sway window manager"
homepage = "https://sr.ht/~tsdh/swayr/"
repository = "https://git.sr.ht/~tsdh/swayr"
authors = ["Tassilo Horn <tsdh@gnu.org>"]
license = "GPL-3.0+"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
directories = "4.0"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }  # without regex
log = "0.4"
once_cell = "1.15"
peg = "0.8"
rand = "0.8"
regex = "1.6"
rt-format = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swayipc = "3.0"
toml = "0.5"
