[package]
name = "swayr"
version = "0.27.4"
description = "A LRU window-switcher (and more) for the sway window manager"
homepage = "https://sr.ht/~tsdh/swayr/"
repository = "https://git.sr.ht/~tsdh/swayr"
authors = ["Tassilo Horn <tsdh@gnu.org>"]
license = "GPL-3.0+"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
env_logger = { version = "0.11", default-features = false, features = ["color", "auto-color", "humantime"] }  # without regex
log = "0.4"
once_cell = "1.19"
peg = "0.8"
rand = "0.8"
regex = "1.10"
rt-format = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swayipc = "3.0"
toml = "0.8"
