[package]
name = "swayrbar"
version = "0.2.4"
edition = "2021"
homepage = "https://sr.ht/~tsdh/swayr/#swayrbar"
repository = "https://git.sr.ht/~tsdh/swayr"
description = "A swaybar-protocol implementation for sway/swaybar"
authors = ["Tassilo Horn <tsdh@gnu.org>"]
license = "GPL-3.0+"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
battery = "0.7"
chrono = "0.4"
directories = "4.0"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }  # without regex
log = "0.4"
once_cell = "1.15"
regex = "1.6"
rt-format = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swaybar-types = "3.0"
swayipc = "3.0"
sysinfo = "0.26"
toml = "0.5"
