[package]
name = "swayrbar"
version = "0.3.6"
edition = "2021"
homepage = "https://sr.ht/~tsdh/swayr/#swayrbar"
repository = "https://git.sr.ht/~tsdh/swayr"
description = "A swaybar-protocol implementation for sway/swaybar"
authors = ["Tassilo Horn <tsdh@gnu.org>"]
license = "GPL-3.0+"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
battery = "0.7"
# chrono without oldtime & wasmbind.  oldtime pulls in an old time crate with security vulnerability.
chrono = {version = "0.4", default-features = false, features = ["clock", "std"] }
directories = "5.0"
env_logger = { version = "0.10", default-features = false, features = ["color", "auto-color", "humantime"] }  # without regex
log = "0.4"
once_cell = "1.18"
regex = "1.8"
rt-format = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swaybar-types = "3.0"
swayipc = "3.0"
sysinfo = "0.29"
toml = "0.7"
